Show ability tooltips above action bar slots

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             border-radius: 8px;
             background: linear-gradient(135deg, #2a2a3e, #1a1a2e);
             cursor: pointer;
-            overflow: hidden;
+            overflow: visible;
             transition: all 0.2s;
         }
 
