--- a/index.html
+++ b/index.html
@@ -57,15 +57,12 @@
                             <span>Talent Bonus (%)</span>
                             <input type="number" id="talentBonus" min="0" value="30">
                         </label>
-                        <label>
-                            <span>Proc Chance (%)</span>
-                            <input type="number" id="procChance" min="0" max="100" value="15">
-                        </label>
-                        <label>
-                            <span>Proc Energy</span>
-                            <input type="number" id="procEnergy" min="0" value="25">
-                        </label>
                     </div>
+                </section>
+
+                <section class="panel-section">
+                    <h2>Combat Procs</h2>
+                    <div id="procConfig" class="proc-config"></div>
                 </section>
 
                 <section class="panel-section">
@@ -125,6 +122,7 @@
                             <div class="dummy-body"></div>
                             <div class="dummy-shadow"></div>
                         </div>
+                        <div class="floating-text-container" id="floatingTextContainer"></div>
                     </div>
 
                     <div class="resource-panel">
