Add ability damage breakdown analytics panel

--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
                 </section>
 
                 <section class="panel-section">
+                    <h2>Ability Breakdown</h2>
+                    <div class="ability-breakdown">
+                        <div class="breakdown-header">
+                            <span>Ability</span>
+                            <span>Uses</span>
+                            <span>Damage</span>
+                            <span>Share</span>
+                        </div>
+                        <div id="abilityBreakdownList" class="breakdown-list"></div>
+                    </div>
+                </section>
+
+                <section class="panel-section">
                     <h2>Buffs & Debuffs</h2>
                     <div class="buff-list" id="buffList"></div>
                     <div class="debuff-list" id="debuffList"></div>
