--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rogue PvE Damage Dummy Simulator</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 <script type="importmap">
 {
   "imports": {
@@ -252,6 +252,6 @@
         <span class="tooltip-hotkey"></span>
     </div>
 
-    <script src="index.tsx" type="module"></script>
+    <script src="dist/index.js" type="module"></script>
 </body>
 </html>
